# Kelvin-wake-simulation-for-USV

./: CMakeLists.txt  calculated.cpp  influencedpoint.cpp  influencedpoint.h  influencingpoint.cpp  influencingpoint.h  main.cpp  readme.md  shipcourse.cpp  shipcourse.h  surfacegrid.cpp  surfacegrid.h  varied_speed.cpp
script/: final_2m.csv
scrpit/: cal2m.csv  mapping.txt  view_wake.m
